tests/fixtures/subdomains/invalid/duplicate-bc/strategic/subdomain-suite.cue
package mesh_spec

subdomainSuite: {
	catalog:          subdomainCatalog
	fitnessFunctions: subdomainFitnessFunctions
	ciPolicy:         subdomainCIPolicy
}
